--- a/public/login.html
+++ b/public/login.html
@@ -59,7 +59,7 @@
                 <div class='head-right'>Login</div>
             </a>
             <a href='./create_new.html'>
-                <div class='head-right'>Create New Post</div>
+                <div class='head-right'>New Post</div>
             </a>
             <a href='./index.html'>
                 <div class='head-right'>Home</div>
