login page styles

--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
             <a href='./login.html'>
                 <div class='head-right'>Login</div>
             </a>
-            <a href='./create_new.html'>
+            <a href='./new_post.html'>
                 <div class='head-right'>New Post</div>
             </a>
             <a href='./index.html'>
