--- a/public/new_post.html
+++ b/public/new_post.html
@@ -2,8 +2,32 @@
 <html>
 <head>
 	<title>New Post Page</title>
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel= "stylesheet" href= "new_page.css">
+
 </head>
 <body>
+<div class="form-group">
+	<form>
+
+	  <div 
+	    <label for="exampleInputPassword1">Password</label>
+	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+	  </div>
+	  <div class="form-group">
+	 	 <textarea id= "code-input" class="form-control input-lg" type="text" placeholder="Main Input"></textarea>
+	  </div>
+	  <!-- <div class="form-group">
+	    <label for="exampleInputFile">File input</label>
+	    <input type="file" id="exampleInputFile">
+	    <p class="help-block">Example block-level help text here.</p>
+	  </div> -->
+	 
+	  <button type="submit" class="btn btn-default">Submit</button>
+	</form>
+</div>	 
+
 
 </body>
 </html>
