--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,8 @@
 			<h2 class="titledesc">It's raining cats and codes!</h2>
 		</div>
 		<div class="container">
-			<div class="col-md-8" id="posts">Posts
+			<div class="col-md-8" id="posts">
+				<font color="white">Posts</font>
 				<ul class="list-group" id="post_list">
 	  				<li class="list-group-item">
 	  					<div class="check">Like</div>
@@ -64,10 +65,11 @@
 			</div>
 		</div>
 	</div>
-	<footer class="container">
+	<div class="navbar navbar-default foot">
 		<!-- This is the footer about the CodeBase creators. -->
 		<p>Learn more about the CodeBase creators <a href="./creators.html">here</a>!</p>
-	</footer>
+	</div>
+
 	
 
 </body>
