--- a/public/login.html
+++ b/public/login.html
@@ -49,7 +49,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="page-header" id='page_header'>
+    <div class="navbar" id="page_header">
         <div class='head-left'>
             <div class='head-left-wrapper'>
                 <h1>CodeBase</h1>
