--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/homestyle.css">
 </head>
 <body>
-	
-	<nav class="navbar navbar-default" style="margin-bottom: 0px">
+	<nav class="navbar navbar-default water" style="margin-bottom: 0px">
   		<div class="container-fluid">
     	<!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header">
@@ -20,13 +19,12 @@
 	      </button>
 	      <a class="navbar-brand" href="#">Team Blue</a>
 	    </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">New Post</a></li>
+        <li><a href="#" class="titletab">Home</a></li>
+        <li><a href="#" class="titletab">Login</a></li>
+        <li><a href="#" class="titletab">New Post</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -34,7 +32,7 @@
 	<div class="back">
 		<div class="title">
 			<h1 class="title">CodeBase</h1>
-			<h2 class="titledesc">It's raining cats and codes!</h2>
+			<h4 class="titledesc">It's raining cats and codes!</h4>
 		</div>
 		<div class="container">
 			<div class="col-md-8" id="posts">
@@ -56,7 +54,6 @@
 	  					<div class="check">Like</div>
 	  				</li>
 				</ul>
-
 			</div>
 		<div id="contain">
 			<div class="col-md-4" id="ans">Scrolling Answer
@@ -65,11 +62,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="navbar navbar-default foot">
+	<div>
+		<a href="./creators.html"><button class="navbar navbar-default foot">
 		<!-- This is the footer about the CodeBase creators. -->
-		<p>Learn more about the CodeBase creators <a href="./creators.html">here</a>!</p>
+		<p>Learn more about the CodeBase creators!</p>
+			</button>
+		</a>
 	</div>
-
 	
 
 </body>
