--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/homestyle.css">
 </head>
 <body>
-	<nav class="navbar navbar-default water" style="margin-bottom: 0px">
+	<nav class="navbar navbar-default water" id="water" style="margin-bottom: 0px">
   		<div class="container-fluid">
     	<!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header">
@@ -31,7 +31,7 @@
 </nav>
 	<div class="back">
 		<div class="title">
-			<h1 class="title">CodeBase</h1>
+			<p class="title">CodeBase</p>
 			<h4 class="titledesc">It's raining cats and codes!</h4>
 		</div>
 		<div class="container">
