--- a/public/new_post.html
+++ b/public/new_post.html
@@ -4,30 +4,49 @@
 	<title>New Post Page</title>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel= "stylesheet" type= "text/css" href= "new_page.css">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+<link rel= "stylesheet" type= "text/css" href= "css/new_page.css">
+<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.css" rel="stylesheet">
 
 </head>
 <body>
+
 <div class="form-group">
 	<form>
 
-	  <div 
-	    <label for="exampleInputPassword1">Password</label>
-	    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+	  <div>
+	    <div class="page-header">
+  			<p>Code Base</p>
+		</div>
 	  </div>
-	  <div class="form-group">
-	 	 <textarea id= "code-input" class="form-control input-lg" type="text" placeholder="Main Input"></textarea>
-	  </div>
+	  <div id="summernote" placeholder= "Enter Snippet Here"></div>
+
+	  
 	  <!-- <div class="form-group">
 	    <label for="exampleInputFile">File input</label>
 	    <input type="file" id="exampleInputFile">
 	    <p class="help-block">Example block-level help text here.</p>
 	  </div> -->
 	 
-	  <button type="submit" class="btn btn-default">Submit</button>
+	  <button type="submit" class="btn btn-default submitbtn">Dive In!</button>
 	</form>
 </div>	 
 
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
+<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.js"></script>
+<script>
+$('#summernote').summernote({
+  height: 300,                 // set editor height
+  minHeight: null,             // set minimum height of editor
+  maxHeight: null,
+               // set maximum height of editor
+  focus: true              // set focus to editable area after initializing summernote
+});	
+
+
+
+ 
+</script>
 
 </body>
 </html>
