added links to the home page tabs

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Team Blue</a>
+	      <a class="navbar-brand" href="./index.html">Team Blue</a>
 	    </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="titletab">Home</a></li>
-        <li><a href="#" class="titletab">Login</a></li>
-        <li><a href="#" class="titletab">New Post</a></li>
+        <li><a href="./index.html" class="titletab">Home</a></li>
+        <li><a href="./login.html" class="titletab">Login</a></li>
+        <li><a href="./new_post.html" class="titletab">New Post</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
