--- a/public/new_post.html
+++ b/public/new_post.html
@@ -1,36 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>New Post Page</title>
-	<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
-<link rel= "stylesheet" type= "text/css" href= "css/new_page.css">
-<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.css" rel="stylesheet">
+	<head>
+		<title>New Post Page</title>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 
-</head>
+		<link rel= "stylesheet" type= "text/css" href= "css/new_page.css">
+		<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.css" rel="stylesheet">
+
+	</head>
 <body>
 
-<div class="form-group">
-	<form>
+	<nav class="navbar navbar-default water" id="water" style="margin-bottom: 0px">
+	  	<div class="container-fluid">
+	    	<!-- Brand and toggle get grouped for better mobile display -->
+	    	<div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">CodeBase</a>
+		    </div>
+	    <!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#" class="titletab">Homebase</a></li>
+	        <!-- <li><a href="#" class="titletab">Login</a></li>
+	        <li><a href="#" class="titletab">New Post</a></li> -->
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
 
-	  <div>
-	    <div class="page-header">
-  			<p>Code Base</p>
+	<div class="form-group">
+		<form>
+		  <div>
+		    <div class="page-header">
+	  			<p>Code Base</p>
+			</div>
+		  </div>
+		  <div class="input-group input-group-lg">
+			  <span class="input-group-addon" id="sizing-addon1">CodeBase</span>
+			  <input type="text" class="form-control" placeholder="Enter title here!" aria-describedby="sizing-addon1">
 		</div>
-	  </div>
-	  <div id="summernote" placeholder= "Enter Snippet Here"></div>
+		  <div id="summernote" placeholder= "Enter Snippet Here"></div>
 
-	  
-	  <!-- <div class="form-group">
-	    <label for="exampleInputFile">File input</label>
-	    <input type="file" id="exampleInputFile">
-	    <p class="help-block">Example block-level help text here.</p>
-	  </div> -->
-	 
-	  <button type="submit" class="btn btn-default submitbtn">Dive In!</button>
-	</form>
-</div>	 
+		  
+		  <!-- <div class="form-group">
+		    <label for="exampleInputFile">File input</label>
+		    <input type="file" id="exampleInputFile">
+		    <p class="help-block">Example block-level help text here.</p>
+		  </div> -->
+		 
+		  <button type="submit" class="btn btn-default" id="submitbtn">Dive In!</button>
+		</form>
+	</div>	 
+
+
+
+
+
+
+	<!-- our js links -->
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.js"></script>
@@ -44,8 +78,6 @@ $('#summernote').summernote({
 });	
 
 
-
- 
 </script>
 
 </body>
