--- a/public/login.html
+++ b/public/login.html
@@ -42,7 +42,16 @@
 		$(document).ready(function() {
 			$('#submit').click(tryToLogin);
 			$('#register').click(tryToRegister);
-		});
+            $('#submit').mouseover(function(){
+                $('#submit').val('Right?');
+            });
+            $('#submit').mouseout(function(){
+                $('#submit').val('Dive In');
+            });
+
+        });
+
+
 	</script>
     <link rel='stylesheet' type='text/css' href='./css/loginstyle.css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -70,10 +79,10 @@
 
     <div class='login'>
         <h1>Login</h1>
-        <input type="text" id="username" placeholder="Username" required="required" />
-        <input type="password" id="password" placeholder="Password" required="required" />
-        <input type="button" id="submit" value="login">
-        <input type="button" id="register" value="register">
+        <input type="text" id="username" placeholder="Username" required="required"></input>
+        <input type="password" id="password" placeholder="Password" required="required"></input> 
+        <input type="button" id="submit" value="Dive In"></input>
+        <input type="button" id="register" value="Register"></input>
     </div>
 	<div id="error"></div>
 </body>
