--- a/public/new_post.html
+++ b/public/new_post.html
@@ -46,8 +46,9 @@
 			  <span class="input-group-addon" id="sizing-addon1">CodeBase</span>
 			  <input type="text" class="form-control" placeholder="Enter title here!" aria-describedby="sizing-addon1">
 		</div>
+		<div class="wysiwyg">
 		  <div id="summernote" placeholder= "Enter Snippet Here"></div>
-
+		</div>
 		  
 		  <!-- <div class="form-group">
 		    <label for="exampleInputFile">File input</label>
