u/d TODO, server fix for login page

--- a/public/login.html
+++ b/public/login.html
@@ -18,7 +18,7 @@
 				password: $('#password').val()
 			}, function(data) {
 				if (data === "success"){
-					document.location = "/map";
+					document.location = "/index.html";
 				} else {
 					$('#error').html("NOPE!");
 				}
