--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			$.get("/posts",function(data){
 				$('#post_list').html("");
 				for(var i = 0; i < data.length; i++){
-					$('#post_list').append("<li class='list-group-item'><a id='title"+ data._id +"'>"+data.title+'</a><button class="check" id="post+'data._id'">Like'+data.votes+'</button></li>');
+					$('#post_list').append("<li class='list-group-item'><a id='title"+ data._id +"'>"+data.title+"</a><button class='check' id='post" +data._id+"'>Like"+data.votes+"</button></li>");
 				}
 			});
 		};
@@ -43,12 +43,17 @@
 			})
 		}
 
+		function dummyPost (){
+			$("#ans").html("function myFunction(p1, p2) {return p1 * p2;}");
+		};
 		//mockup without db implementation NEEDS UPDATE
 		$(document).ready(function(){
 			showPosts();
 			$("#title"+id).click(showAns(id));
 			$("#post"+id).click(upVote(id));
 			$("#post"+id).click(showPosts);
+
+			$("#dummypost").click($("#ans").html("function myFunction(p1, p2) {return p1 * p2;}"));
 		});
 
 
@@ -89,7 +94,7 @@
 			<div class="col-md-8" id="posts">
 				<font color="white">Posts</font>
 				<ul class="list-group" id="post_list">
-	  				<li class="list-group-item">
+	  				<li class="list-group-item"><a id="dummypost">Fake Title</a>
 	  					<div class="check">Like</div>
 	  				</li>
 	  				<li class="list-group-item">
