--- a/public/new_post.html
+++ b/public/new_post.html
@@ -8,7 +8,8 @@
 
 		<link rel= "stylesheet" type= "text/css" href= "css/new_page.css">
 		<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.css" rel="stylesheet">
-
+		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.js"></script>
 	</head>
 <body>
 
@@ -27,7 +28,8 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#" class="titletab">Homebase</a></li>
+	        <li><a href="/index(.html)?" class="titletab">Homebase</a></li>
+	        <!-- a href="" -->
 	        <!-- <li><a href="#" class="titletab">Login</a></li>
 	        <li><a href="#" class="titletab">New Post</a></li> -->
 	      </ul>
@@ -42,9 +44,11 @@
 	  			<p>Code Base</p>
 			</div>
 		  </div>
-		  <div class="input-group input-group-lg">
-			  <span class="input-group-addon" id="sizing-addon1">CodeBase</span>
-			  <input type="text" class="form-control" placeholder="Enter title here!" aria-describedby="sizing-addon1">
+		  <div class= "title-input">
+			  <div class="input-group input-group-lg">
+				  <span class="input-group-addon" id="sizing-addon1">CodeBase</span>
+				  <input type="text" class="form-control" id= "title" placeholder="Enter title here!" aria-describedby="sizing-addon1">
+			</div>
 		</div>
 		<div class="wysiwyg">
 		  <div id="summernote" placeholder= "Enter Snippet Here"></div>
@@ -67,8 +71,7 @@
 
 	<!-- our js links -->
 
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.js"></script>
+
 <script>
 $('#summernote').summernote({
   height: 300,                 // set editor height
@@ -77,7 +80,21 @@ $('#summernote').summernote({
                // set maximum height of editor
   focus: true              // set focus to editable area after initializing summernote
 });	
-
+</script>
+<script>
+function sendInputs(){
+	$.post( "/posts", {
+		titleStr: $("#title").val(),
+		bodyStr: $("#summernote").val()
+	},function(data){
+		if(data == success){
+			alert("post uploaded!");
+		}
+	}
+}
+$(document).ready(function(){
+	$("#submitbtn").click(sendInputs);
+});
 
 </script>
 
