--- a/public/index.html
+++ b/public/index.html
@@ -83,10 +83,6 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-	
-
-
 	<div class="back">
 		<div>
 			<a href="/logout">
@@ -102,19 +98,24 @@
 				<font color="white">Posts</font>
 				<ul class="list-group" id="post_list">
 	  				<li class="list-group-item"><a id="dummypost">Fake Title</a>
-	  					<div class="check">Like</div>
+	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
-	  					<div class="check">Like</div>
+	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
-	  					<div class="check">Like</div>
+	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
-	  					<div class="check">Like</div>
+	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
-	  					<div class="check">Like</div>
+	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check"><button>Like</button></div>
 	  				</li>
 				</ul>
 			</div>
