--- a/public/index.html
+++ b/public/index.html
@@ -99,22 +99,27 @@
 				<ul class="list-group" id="post_list">
 	  				<li class="list-group-item"><a id="dummypost">Fake Title</a>
 	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check" id="likevalue">#?</div>
 	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check" id="likevalue">#?</div>
 	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check" id="likevalue">#?</div>
 	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check" id="likevalue">#?</div>
 	  					<div class="check"><button>Like</button></div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
+	  					<div class="check" id="likevalue">#?</div>
 	  					<div class="check"><button>Like</button></div>
 	  				</li>
 				</ul>
