--- a/public/new_post.html
+++ b/public/new_post.html
@@ -28,7 +28,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/index(.html)?" class="titletab">Homebase</a></li>
+	        <li><a href="./index.html" class="titletab">Homebase</a></li>
 	        <!-- a href="" -->
 	        <!-- <li><a href="#" class="titletab">Login</a></li>
 	        <li><a href="#" class="titletab">New Post</a></li> -->
@@ -90,7 +90,7 @@ function sendInputs(){
 		if(data == success){
 			alert("post uploaded!");
 		}
-	}
+	});
 }
 $(document).ready(function(){
 	$("#submitbtn").click(sendInputs);
