--- a/public/index.html
+++ b/public/index.html
@@ -100,27 +100,46 @@
 	  				<li class="list-group-item"><a id="dummypost">Fake Title</a>
 	  					<div class="check" id="report"><button>Report</button></div>
 	  					<div class="check" id="likevalue">#?</div>
-	  					<div class="check"><button>Like</button></div>
+	  					<div class="check">
+	  						<a href="#">
+          						<span class="glyphicon glyphicon-thumbs-up"></span>
+        					</a>
+        				</div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
 	  					<div class="check" id="likevalue">#?</div>
-	  					<div class="check"><button>Like</button></div>
+	  					<div class="check"><a href="#">
+          						<span class="glyphicon glyphicon-thumbs-up"></span>
+        					</a>
+        				</div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
 	  					<div class="check" id="likevalue">#?</div>
-	  					<div class="check"><button>Like</button></div>
+	  					<div class="check">
+	  						<a href="#">
+          						<span class="glyphicon glyphicon-thumbs-up"></span>
+        					</a>
+        				</div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
 	  					<div class="check" id="likevalue">#?</div>
-	  					<div class="check"><button>Like</button></div>
+	  					<div class="check">
+	  						<a href="#">
+          						<span class="glyphicon glyphicon-thumbs-up"></span>
+        					</a>
+        				</div>
 	  				</li>
 	  				<li class="list-group-item">
 	  					<div class="check" id="report"><button>Report</button></div>
 	  					<div class="check" id="likevalue">#?</div>
-	  					<div class="check"><button>Like</button></div>
+	  					<div class="check">
+	  						<a href="#">
+          						<span class="glyphicon glyphicon-thumbs-up"></span>
+        					</a>
+        				</div>
 	  				</li>
 				</ul>
 			</div>
