--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
 				if (data === "success"){
 					document.location = "/index.html";
 				} else {
-					$('#error').html("NOPE!");
+					$('#error').html("INVALID USERNAME OR PASSWORD");
 				}
 			});
 		}
@@ -34,7 +34,7 @@
 				if (data === "success"){
 					document.location = "/index.html";
 				} else {
-					$('#error').html("NOPE!");
+					$('#error').html("INVALID USERNAME OR PASSWORD");
 				}
 			});
 		}
