--- a/public/new_post.html
+++ b/public/new_post.html
@@ -103,6 +103,7 @@ $(document).ready(function(){
     $("#submitbtn").click(function(evt){
         evt.preventDefault();
         sendInputs();
+        document.location = '/index.html';
     });
 });
 
