--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,12 @@
 				}
                 // click listener for getting the id
                 $('.post_title').click(function(){
-                    console.log(this.id);
+                    var postId = (this.id);
+                    var result = data.filter(function(obj){
+                        var postBody = (obj._id == postId);
+                        return postBody;
+                    });
+                    $('.post_body').html(result[0].body);
                 });
 			});
 		}
@@ -77,7 +82,6 @@
                 showPosts();
             },0000);
         });
-
 
 	</script>
 </head>
@@ -131,7 +135,7 @@
 			</div>
 		<div id="contain">
 				<div class="col-md-4" id="ans">
-					<div class='post_body'>Scrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/nScrolling Answer/n
+					<div class='post_body'>
 					</div>
 				</div>
 		</div>
