--- a/public/new_post.html
+++ b/public/new_post.html
@@ -82,7 +82,7 @@ $('#summernote').summernote(
       maxHeight: null,
       focus: true,
     toolbar: [
-        ['style', ['bold', 'italic', 'underline', 'clear']],
+        ['style', ['bold', 'italic', 'underline', 'clear', 'strikethrough']],
         ['insert',['hr']],
         ['color', ['color']],
         ['para', ['ol', 'ul']],
