--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">Team Blue</a>
+          <a class="navbar-brand logocase" href="/creators.html"><img src='./img/logo_300x300.png' class='logo'></img></a>
 	    </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
