--- a/public/login.html
+++ b/public/login.html
@@ -81,7 +81,7 @@
     <div class="navbar" id="page_header">
         <div class='head-left'>
             <div class='head-left-wrapper'>
-                <h1>CodeBase</h1>
+                <a href='/creators.html'><img src='./img/logo_300x300.png' class='logo'></img></a>
             </div>
         </div>
         <div class='head-right-wrapper'>
