--- a/public/new_post.html
+++ b/public/new_post.html
@@ -26,7 +26,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="./creators">CodeBase</a>
+		      <a class="navbar-brand" href="/creators.html"><img src='./img/logo_300x300.png' class='logo'</a>
 		    </div>
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
