--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	
 	<link rel="stylesheet" type="text/css" href="./css/homestyle.css">
+    <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
 
 	<script>
     function loading(){
@@ -68,6 +69,28 @@
 	</script>
 </head>
 <body>
+
+    <!-- BEGIN bubbles -->
+    <div id="background-wrap">
+        <div class="bubble x1"></div>
+        <div class="bubble x2"></div>
+        <div class="bubble x3"></div>
+        <div class="bubble x4"></div>
+        <div class="bubble x5"></div>
+        <div class="bubble x6"></div>
+        <div class="bubble x7"></div>
+        <div class="bubble x8"></div>
+        <div class="bubble x9"></div>
+        <div class="bubble x10"></div>
+        <div class="bubble x11"></div>
+        <div class="bubble x12"></div>
+        <div class="bubble x13"></div>
+        <div class="bubble x14"></div>
+        <div class="bubble x15"></div>
+    </div>
+    <!-- END bubbles -->
+
+    <!-- BEGIN navbar -->
 	<nav class="navbar navbar-default water" id="water" style="margin-bottom: 0px">
   		<div class="container-fluid">
     	<!-- Brand and toggle get grouped for better mobile display -->
