--- a/public/login.html
+++ b/public/login.html
@@ -57,6 +57,8 @@
 
 	</script>
     <link rel='stylesheet' type='text/css' href='./css/loginstyle.css'>
+    <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +76,12 @@
         <div class="bubble x8"></div>
         <div class="bubble x9"></div>
         <div class="bubble x10"></div>
-        </div>
+        <div class="bubble x11"></div>
+        <div class="bubble x12"></div>
+        <div class="bubble x13"></div>
+        <div class="bubble x14"></div>
+        <div class="bubble x15"></div>
+    </div>
     <!-- END bubbles -->
 
     <!-- BEGIN navbar -->
