--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="./css/homestyle.css">
     <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
+    <link rel='stylesheet' type='text/css' href='./css/subcat.css'>
 
 	<script>
     function loading(){
@@ -153,6 +154,7 @@
 		</a>
 	</div>
 	
-
+    <div id=subcat></div>
 </body>
+<script src='./js/subcat.js'></script>
 </html>
