--- a/public/login.html
+++ b/public/login.html
@@ -51,6 +51,9 @@
             $('#submit').mouseout(function(){
                 $('#submit').val('Dive In');
             });
+            $('#bubbleToggle').change(function(){
+                $('#background-wrap').toggle();
+            })
 
         });
 
@@ -59,6 +62,9 @@
     <link rel='stylesheet' type='text/css' href='./css/loginstyle.css'>
     <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
 
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+	
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -104,6 +110,14 @@
         </div>
     </div>
     <!-- END navbar -->
+
+        <div class="toggle-switches">
+            <div class="checkbox">
+                <label class="checkbox-inline">
+                    <input type='checkbox' checked data-toggle="toggle" data-size='mini' id='bubbleToggle'>Bubbles
+                </label>
+            </div>
+        </div>
 
     <!-- BEGIN login area -->
     <div class='login'>
