--- a/public/new_post.html
+++ b/public/new_post.html
@@ -5,14 +5,30 @@
         
         <!-- IMPORT JQuery -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+        
         <!-- IMPORT bootstrap -->
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+        <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+        <!-- IMPORT external stylesheets -->	
 		<link rel= "stylesheet" type= "text/css" href= "css/new_page.css">
         <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
+
         <!-- IMPORT summernote -->
 		<link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.css" rel="stylesheet">
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.1/summernote.js"></script>
+
+        <script>
+        $(document).ready(function(){
+            $('#bubbleToggle').change(function(){
+                $('#background-wrap').toggle();
+            })
+        })
+        </script>
+
 	</head>
 <body>
 
@@ -35,8 +51,6 @@
         <div class="bubble x15"></div>
     </div>
     <!-- END bubbles -->
-
-
     <!-- BEGIN navbar -->
 	<nav class="navbar navbar-default water" id="water" style="margin-bottom: 0px">
 	  	<div class="container-fluid">
@@ -61,6 +75,15 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
     <!-- END navbar -->
+
+        <div class="toggle-switches">
+            <div class="checkbox">
+                <label class="checkbox-inline">
+                    <input type='checkbox' checked data-toggle="toggle" data-size='mini' id='bubbleToggle'>Bubbles
+                </label>
+            </div>
+        </div>
+
 
     <!-- BEGIN title -->
     <div>
