--- a/public/creators.html
+++ b/public/creators.html
@@ -48,7 +48,7 @@
     <i></i>
     <i></i>
     <i></i>
-<audio id='rickRoll' src='./music/rickRoll.mp3' loop='loop'></audio>
+<audio id='rickRoll' src='./music/RickRollz.mp3' loop='loop'></audio>
 </body>
 
 <script>
