report button 'working'
annotated all files
report button comes up with a confirmation box

--- a/public/login.html
+++ b/public/login.html
@@ -4,6 +4,7 @@
 <head>
 	<title>CodeBase - Login</title>
 
+    <!-- IMPORT jquery -->
 	<script
 		src="https://code.jquery.com/jquery-3.1.0.min.js"
 		integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="
@@ -59,12 +60,15 @@
 
 
 	</script>
+    <!-- IMPORT external stylesheets -->
     <link rel='stylesheet' type='text/css' href='./css/loginstyle.css'>
     <link rel='stylesheet' type='text/css' href='./css/bubbles.css'>
 
+    <!-- IMPORT bootstrap toggle switches -->
     <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 	
+    <!-- IMPORT bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
@@ -111,6 +115,7 @@
     </div>
     <!-- END navbar -->
 
+    <!-- BEGIN toggle switches -->
         <div class="toggle-switches">
             <div class="checkbox">
                 <label class="checkbox-inline">
@@ -118,6 +123,7 @@
                 </label>
             </div>
         </div>
+    <!-- END toggle switches -->
 
     <!-- BEGIN login area -->
     <div class='login'>
