--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand logocase" href="/creators.html"><img src='./img/logo_300x300.png' class='logo'></img></a> <!-- Logo -->
+              <a class="navbar-brand logocase" href="/creators.html"><img src='./img/cb_logo_update_300x300.png' class='logo'></img></a> <!-- Logo -->
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
