--- a/public/login.html
+++ b/public/login.html
@@ -98,7 +98,7 @@
     <div class="navbar" id="page_header">
         <div class='head-left'>
             <div class='head-left-wrapper'>
-                <a href='/creators.html'><img src='./img/logo_300x300.png' class='logo'></img></a>
+                <a href='/creators.html'><img src='./img/cb_logo_update_300x300.png' class='logo'></img></a>
             </div>
         </div>
         <div class='head-right-wrapper'>
